# controller/eventcontroller.go
@@ -65,7 +65,7 @@ func AmbilSemuaEvent(w http.ResponseWriter, r *http.Request) {
 // @Tags Event
 // @Accept json
 // @Produce json
-// @Param id query string true "id event"
+// @Param id path string true "id event"
 // @Success 200 {string} AmbilDetailEvent
 // @Router /event/detail/{id} [get]
 func AmbilDetailEvent(w http.ResponseWriter, r *http.Request) {
@@ -101,7 +101,7 @@ func AmbilDetailEvent(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param booking_code query string true "booking code"
 // @Success 200 {string} AmbilDetailEvent
-// @Router /event/cekticket/ [post]
+// @Router /event/cekticket [post]
 func CekTicket(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Context-Type", "application/x-www-form-urlencoded")
 	w.Header().Set("Access-Control-Allow-Origin", "*")
