# docs/swagger.yaml
@@ -1,5 +1,5 @@
 basePath: /api/v1
-host: api.yeah.biz.id
+host: localhost:9100
 info:
   contact: {}
   description: API for YEAH Apps
@@ -111,7 +111,7 @@ paths:
       summary: ambil semua event
       tags:
       - Event
-  /event/cekticket/:
+  /event/cekticket:
     post:
       consumes:
       - application/json
@@ -139,7 +139,7 @@ paths:
       description: ambil detail event
       parameters:
       - description: id event
-        in: query
+        in: path
         name: id
         required: true
         type: string
